Updated slovak translation

--- a/po/sk.po
+++ b/po/sk.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: gnome-color-manager\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=gnome-"
 "color-manager&keywords=I18N+L10N\n"
-"POT-Creation-Date: 2013-08-31 06:39+0000\n"
-"PO-Revision-Date: 2013-09-02 19:26+0100\n"
+"POT-Creation-Date: 2013-09-11 07:15+0000\n"
+"PO-Revision-Date: 2013-09-11 13:18+0100\n"
 "Last-Translator: Dušan Kazik <prescott66@gmail.com>\n"
 "Language-Team: Slovak <gnome-sk-list@gnome.org>\n"
 "Language: sk\n"
@@ -1494,11 +1494,9 @@ msgstr "Naozaj chcete odstrániť tento profil navždy z vášho systému?"
 msgid "Delete"
 msgstr "Odstrániť"
 
-# PM: zrejme importovať ak je to tlačidlo alebo akcia z menu
 #: ../src/gcm-viewer.c:450
-#, fuzzy
 msgid "_Import"
-msgstr "_Import"
+msgstr "_Importovať"
 
 #. TRANSLATORS: filter name on the file->open dialog
 #: ../src/gcm-viewer.c:468
@@ -1692,12 +1690,10 @@ msgstr "Typ spojenia"
 msgid "Screen brightness"
 msgstr "Jas obrazovky"
 
-# PM: toto sa mi nevidí dobre, bude to niečo ako tretí rozmer (objem) priestoru farieb
 #. TRANSLATORS: e.g. the 3D volume of the gamut graph
 #: ../src/gcm-viewer.c:811
-#, fuzzy
 msgid "Gamut volume"
-msgstr "Oblasť farieb Gamut"
+msgstr "Tretí rozmer priestoru farieb (Gamut)"
 
 #. TRANSLATORS: e.g. what proportion of sRGB is covered
 #: ../src/gcm-viewer.c:813
@@ -1724,12 +1720,10 @@ msgstr "Neboli nastavené žiadne autorské práva"
 msgid "The display compensation table is invalid"
 msgstr "Kompenzačná tabuľka displeja je neplatná"
 
-# PM: scum dot doslovne znečisťujúca bodka, takže dot nie je bod ale bodka a nie je dôvod mať tam vadný aj scum
 #. TRANSLATORS: the profile is broken
 #: ../src/gcm-viewer.c:938
-#, fuzzy
 msgid "A scum dot is present for media white"
-msgstr "V médiu bielej farby sa nachádza vadný bod scum"
+msgstr "V médiu bielej farby sa nachádza znečisťujúca bodka"
 
 #. TRANSLATORS: the profile is broken
 #: ../src/gcm-viewer.c:942
