--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,19 @@
+Version 3.10.0
+~~~~~~~~~~~~~~
+Released: 2013-09-24
+
+* Translations
+ - Add Kazakh translation (Baurzhan Muftakhidinov)
+ - Fix broken tags in Chinese Simplified help translation (Piotr Drąg)
+ - Updated Basque language (Inaki Larranaga Murgoitio)
+ - Updated Danish translation (Kenneth Nielsen)
+ - Updated Japanese translation (victory)
+ - Updated Korean translation (Changwoo Ryu)
+ - Updated Portuguese translation (António Lima)
+ - Updated Punjabi translation (A S Alam)
+ - Updated Slovak translation (Dušan Kazik)
+ - Updated Ukrainian translation (Daniel Korostil)
+
 Version 3.9.92
 ~~~~~~~~~~~~~~
 Released: 2013-09-13
