--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -8,16 +8,16 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gnome-color-manager 2.91.4\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2013-09-08 22:10+0800\n"
-"PO-Revision-Date: 2013-09-07 14:02+0800\n"
-"Last-Translator: Chao-Hsiung Liao <j_h_liau@yahoo.com.tw>\n"
+"POT-Creation-Date: 2013-09-30 19:32+0800\n"
+"PO-Revision-Date: 2013-09-29 02:41+0800\n"
+"Last-Translator: Cheng-Chia Tseng <pswo10680@gmail.com>\n"
 "Language-Team: Chinese (Taiwan) <zh-l10n@lists.linux.org.tw>\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"X-Generator: Poedit 1.5.5\n"
+"X-Generator: Poedit 1.5.4\n"
 
 #: ../data/gcm-calibrate.desktop.in.h:1
 msgid "Color"
@@ -93,6 +93,18 @@ msgstr "錯誤："
 #: ../data/gcm-picker.ui.h:22
 msgid "Results"
 msgstr "結果"
+
+#: ../data/gcm-viewer.appdata.xml.in.h:1
+msgid ""
+"GNOME Color Profile Viewer shows installed color profiles on your system and "
+"allows you to calibrate displays, printers and cameras using a wizard."
+msgstr ""
+
+#: ../data/gcm-viewer.appdata.xml.in.h:2
+msgid ""
+"This functionality is typically used by GNOME Control Center from the color "
+"panel although can be used on its own."
+msgstr ""
 
 #: ../data/gcm-viewer.desktop.in.h:1 ../data/gcm-viewer.ui.h:1
 msgid "Color Profile Viewer"
@@ -1697,7 +1709,7 @@ msgstr "該描述檔有下列問題："
 #. TRANSLATORS: this is the icc creation date strftime format
 #: ../src/gcm-viewer.c:1236
 msgid "%B %e %Y, %I:%M:%S %p"
-msgstr "%Y %B %e,%p %I:%M:%S"
+msgstr "%Y年%b%e日,%p %I:%M:%S"
 
 #. TRANSLATORS: this is the tooltip when the profile can be deleted
 #: ../src/gcm-viewer.c:1259
