--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,18 @@
+Version 3.10.1
+~~~~~~~~~~~~~~
+Released: 2013-10-14
+
+* Translations
+ - Updated Catalan (Valencian) translation (Carles Ferrando)
+ - Updated Persian translations (Arash Mousavi)
+ - Updated Traditional Chinese translation (Cheng-Chia Tseng)
+
+* New Features:
+ - Use the new AppData screenshots (Richard Hughes)
+
+* Bugfix:
+ - Fix grammar in the AppData description (Piotr Drąg)
+
 Version 3.10.0
 ~~~~~~~~~~~~~~
 Released: 2013-09-24
