--- a/po/ru.po
+++ b/po/ru.po
@@ -1,24 +1,25 @@
 # GNOME Color Manager 3.4 translation into Russian
-# Александр Прокудин <alexandre.prokoudine@gmail.com>, 2009, 2010, 2011, 2012, 2013
+#
+# Александр Прокудин <alexandre.prokoudine@gmail.com>, 2009, 2010, 2011, 2012, 2013.
 # Yuri Myasoedov <omerta13@yandex.ru>, 2012.
 # Stas Solovey <whats_up@tut.by>, 2013.
-#
+# JDronova <juliette.tux@gmail.com>, 2013.
 msgid ""
 msgstr ""
 "Project-Id-Version: gnome-color-manager 3.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=gnome-"
 "color-manager&keywords=I18N+L10N\n"
-"POT-Creation-Date: 2013-08-31 06:39+0000\n"
-"PO-Revision-Date: 2013-09-02 22:05+0300\n"
-"Last-Translator: Stas Solovey <whats_up@tut.by>\n"
-"Language-Team: Русский <gnome-cyr@gnome.org>\n"
+"POT-Creation-Date: 2013-10-14 10:50+0000\n"
+"PO-Revision-Date: 2013-11-07 16:08+0400\n"
+"Last-Translator: Yuri Myasoedov <ymyasoedov@yandex.ru>\n"
+"Language-Team: Russian <gnome-cyr@gnome.org>\n"
 "Language: ru\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
-"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2)\n"
-"X-Generator: Gtranslator 2.91.6\n"
+"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"X-Generator: Poedit 1.5.7\n"
 
 #: ../data/gcm-calibrate.desktop.in.h:1
 msgid "Color"
@@ -247,7 +248,7 @@ msgstr "Следующее изображение"
 
 #: ../data/gcm-viewer.ui.h:46
 msgid "This shows what an image would look like if saved with the profile"
-msgstr "Как выглядит изображение, если его сохранить с этим профилем"
+msgstr "Так будет выглядеть изображение, если его сохранить с этим профилем"
 
 #: ../data/gcm-viewer.ui.h:47
 msgid "From sRGB"
@@ -255,7 +256,7 @@ msgstr "Из sRGB"
 
 #: ../data/gcm-viewer.ui.h:48
 msgid "This shows what an image would look like if opened with the profile"
-msgstr "Как выглядит изображение, если его открыть с этим профилем"
+msgstr "Так будет выглядеть изображение, если его открыть с этим профилем"
 
 #: ../data/gcm-viewer.ui.h:49
 msgid "To sRGB"
@@ -263,7 +264,7 @@ msgstr "В sRGB"
 
 #: ../data/gcm-viewer.ui.h:50
 msgid "Named colors are specific colors that are defined in the profile"
-msgstr "Именованные цвета — это специфические цвета, определённые в профиле"
+msgstr "Именованные цвета — это конкретные цвета, определённые в профиле"
 
 #: ../data/gcm-viewer.ui.h:51
 msgid "Named Colors"
@@ -638,7 +639,7 @@ msgstr "Калибровка не завершена"
 
 #: ../src/gcm-calibrate-main.c:150
 msgid "Are you sure you want to cancel the calibration?"
-msgstr "Вы действительно хотите отменить калибровку?"
+msgstr "Действительно отменить калибровку?"
 
 #: ../src/gcm-calibrate-main.c:153
 msgid "Continue calibration"
@@ -690,8 +691,7 @@ msgstr ""
 #. TRANSLATORS: this is the final intro page text
 #: ../src/gcm-calibrate-main.c:759
 msgid "You can cancel this process at any stage by pressing the cancel button."
-msgstr ""
-"Вы можете прекратить этот процесс в любой момент, нажав кнопку «Отменить»."
+msgstr "Этот процесс можно отменить в любой момент, нажав кнопку «Отменить»."
 
 #. TRANSLATORS: this is the calibration wizard page title
 #: ../src/gcm-calibrate-main.c:765
@@ -781,8 +781,8 @@ msgid ""
 "Before calibrating the display, it is recommended to configure your display "
 "with the following settings to get optimal results."
 msgstr ""
-"Перед созданием профиля рекомендуется откалибровать монитор, т.е. привести "
-"его в определённое типовое состояние."
+"Для получения оптимального результата, перед калибровкой рекомендуется "
+"настроить монитор со следующими параметрами."
 
 #. TRANSLATORS: dialog message, preface
 #: ../src/gcm-calibrate-main.c:1023
@@ -790,9 +790,8 @@ msgid ""
 "You may want to consult the owner's manual for your display on how to "
 "achieve these settings."
 msgstr ""
-"Вероятно, вам необходимо прочитать руководство пользователя к монитору, "
-"чтобы узнать, как именно настроить монитор. В целом, необходимо сделать "
-"следующее:"
+"Вероятно, вам понадобится прочитать руководство пользователя к монитору, "
+"чтобы узнать, как именно выставить данные параметры."
 
 #. TRANSLATORS: dialog message, bullet item
 #: ../src/gcm-calibrate-main.c:1026
@@ -878,12 +877,12 @@ msgstr ""
 #. TRANSLATORS: dialog message, asking if it's okay to install them
 #: ../src/gcm-calibrate-main.c:1179
 msgid "Do you want them to be installed?"
-msgstr "Вы хотите, чтобы они были установлены?"
+msgstr "Установить их?"
 
 #. TRANSLATORS: dialog message, if the user has the target file on a CDROM then there's no need for this package
 #: ../src/gcm-calibrate-main.c:1181
 msgid "If you already have the correct file, you can skip this step."
-msgstr "Если у вас уже есть нужный файл, этот шаг можно пропустить."
+msgstr "Если нужный файл уже имеется, этот шаг можно пропустить."
 
 #. TRANSLATORS: this is the page title
 #: ../src/gcm-calibrate-main.c:1184
@@ -956,8 +955,8 @@ msgid ""
 "Before profiling the device, you have to manually capture an image of a "
 "calibration target and save it as a TIFF image file."
 msgstr ""
-"Перед профилированием устройства вам необходимо самостоятельно получить "
-"изображение мишени и сохранить его в файле формата TIFF."
+"Перед профилированием устройства необходимо вручную получить изображение "
+"мишени и сохранить его в файле формата TIFF."
 
 #. TRANSLATORS: dialog message, preface
 #: ../src/gcm-calibrate-main.c:1343
@@ -994,7 +993,7 @@ msgstr "Выберите тип калибровочной мишени."
 #. TRANSLATORS: this is the page title
 #: ../src/gcm-calibrate-main.c:1359
 msgid "What target type do you have?"
-msgstr "Какая у вас калибровочная мишень?"
+msgstr "Имеющийся у вас тип калибровочный мишени"
 
 #. TRANSLATORS: this is the calibration wizard page title
 #: ../src/gcm-calibrate-main.c:1391
@@ -1079,8 +1078,8 @@ msgid ""
 "Please indicate if you want to profile a local printer, generate some test "
 "patches, or profile using existing test patches."
 msgstr ""
-"Выберите, что хотите сделать: создать профиль для локального принтера, "
-"просто напечатать мишени или создать профиль по готовой мишени."
+"Что нужно сделать: создать профиль для локального принтера, создать тестовые "
+"мишени или создать профиль по готовой мишени?"
 
 #. TRANSLATORS: this is the calibration wizard page title
 #: ../src/gcm-calibrate-main.c:1656
@@ -1122,11 +1121,11 @@ msgstr "Для создания высокоточных профилей так
 #. TRANSLATORS: radio options for calibration precision
 #: ../src/gcm-calibrate-main.c:1722
 msgid "Accurate"
-msgstr "Аккуратная"
+msgstr "Тщательная"
 
 #: ../src/gcm-calibrate-main.c:1723
 msgid "Normal"
-msgstr "Обычная"
+msgstr "Стандартная"
 
 #: ../src/gcm-calibrate-main.c:1724
 msgid "Quick"
@@ -1225,7 +1224,7 @@ msgstr "Сделать это окно модальным"
 #. TRANSLATORS: show just the one profile, rather than all
 #: ../src/gcm-calibrate-main.c:2318
 msgid "Set the specific device to calibrate"
-msgstr "Выберите устройство для калибровки и профилирования"
+msgstr "Укажите конкретное устройство для калибровки и профилирования"
 
 #: ../src/gcm-calibrate-main.c:2359
 msgid "No device was specified!"
@@ -1391,12 +1390,12 @@ msgstr "Показать свойства сервера X"
 #. TRANSLATORS: command line option
 #: ../src/gcm-inspect.c:370
 msgid "Get the profiles for a specific file"
-msgstr "Получить профили для определённого файла"
+msgstr "Получить профили для указанного файла"
 
 #. TRANSLATORS: command line option
 #: ../src/gcm-inspect.c:373
 msgid "Get the profile for a specific window"
-msgstr "Получить профиль для определённого окна"
+msgstr "Получить профиль для указанного окна"
 
 #. TRANSLATORS: command line option
 #: ../src/gcm-inspect.c:376
@@ -1468,7 +1467,7 @@ msgstr "Удалить профиль навсегда?"
 #: ../src/gcm-viewer.c:396
 msgid ""
 "Are you sure you want to remove this profile from your system permanently?"
-msgstr "Вы действительно хотите удалить этот профиль из системы навсегда?"
+msgstr "Действительно удалить этот профиль из системы?"
 
 #. TRANSLATORS: button, delete a profile
 #: ../src/gcm-viewer.c:399
@@ -1776,9 +1775,9 @@ msgstr "Невозможно удалить этот профиль"
 #. TRANSLATORS: show just the one profile, rather than all
 #: ../src/gcm-viewer.c:1822
 msgid "Set the specific profile to show"
-msgstr "Показать ровно этот профиль"
+msgstr "Указать определённый профиль для показа"
 
 #. TRANSLATORS: show just the one filename, rather than all
 #: ../src/gcm-viewer.c:1825
 msgid "Set the specific file to show"
-msgstr "Показать ровно этот файл"
+msgstr "Указать определённый файл для показа"
