--- a/po/tg.po
+++ b/po/tg.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: Tajik Gnome\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=gnome-"
 "color-manager&keywords=I18N+L10N\n"
-"POT-Creation-Date: 2013-10-08 13:13+0000\n"
-"PO-Revision-Date: 2013-10-31 12:42+0500\n"
+"POT-Creation-Date: 2013-11-07 12:15+0000\n"
+"PO-Revision-Date: 2013-11-14 17:16+0500\n"
 "Last-Translator: Victor Ibragimov <victor.ibragimov@gmail.com>\n"
 "Language-Team: \n"
 "Language: Tajik\n"
@@ -57,25 +57,21 @@ msgstr "XYZ"
 
 #. Lab is the color representation and D50 is the white point
 #: ../data/gcm-picker.ui.h:8
-#| msgid "Lab (D50):"
 msgid "Lab (D50)"
 msgstr "Озмоишгоҳи (D50)"
 
 #. This refers to the amount of ambient light on the sensor
 #: ../data/gcm-picker.ui.h:10
-#| msgid "Media whitepoint:"
 msgid "Media whitepoint"
 msgstr "Нуқтаи сафеди медиа"
 
 #. This refers to the amount of ambient light on the sensor
 #: ../data/gcm-picker.ui.h:12
-#| msgid "Color Temperature:"
 msgid "Color Temperature"
 msgstr "Ҳарорати ранг"
 
 #. This refers to the amount of ambient light on the sensor
 #: ../data/gcm-picker.ui.h:14
-#| msgid "Ambient:"
 msgid "Ambient"
 msgstr "Атроф"
 
@@ -94,7 +90,6 @@ msgstr "RGB"
 
 #. This shows the error in the conversion to RGB.
 #: ../data/gcm-picker.ui.h:20
-#| msgid "Error:"
 msgid "Error"
 msgstr "Хато"
 
@@ -935,18 +930,21 @@ msgstr "CMP DT 003"
 
 #. TRANSLATORS: this is probably a brand name
 #: ../src/gcm-calibrate-main.c:1232
-msgid "Color Checker"
-msgstr "Санҷишгари ранг"
+#| msgid "Color Checker"
+msgid "ColorChecker"
+msgstr "Озмунгари ранг"
 
 #. TRANSLATORS: this is probably a brand name
 #: ../src/gcm-calibrate-main.c:1236
-msgid "Color Checker DC"
-msgstr "Санҷишгари ранг DC"
+#| msgid "Color Checker DC"
+msgid "ColorChecker DC"
+msgstr "Озмунгари ранги DC"
 
 #. TRANSLATORS: this is probably a brand name
 #: ../src/gcm-calibrate-main.c:1240
-msgid "Color Checker SG"
-msgstr "Санҷишгари ранг SG"
+#| msgid "Color Checker SG"
+msgid "ColorChecker SG"
+msgstr "Озмунгари ранги SG"
 
 #. TRANSLATORS: this is probably a brand name
 #: ../src/gcm-calibrate-main.c:1244
