Updated Spanish translation

--- a/po/es.po
+++ b/po/es.po
@@ -8,18 +8,18 @@ msgstr ""
 "Project-Id-Version: gnome-color-manager.master\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=gnome-"
 "color-manager&keywords=I18N+L10N\n"
-"POT-Creation-Date: 2013-10-08 13:13+0000\n"
-"PO-Revision-Date: 2013-10-31 13:13+0100\n"
+"POT-Creation-Date: 2013-11-07 12:15+0000\n"
+"PO-Revision-Date: 2013-11-16 17:58+0100\n"
 "Last-Translator: Daniel Mustieles <daniel.mustieles@gmail.com>\n"
-"Language-Team: Español <gnome-es-list@gnome.org>\n"
+"Language-Team: Español; Castellano <gnome-es-list@gnome.org>\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Poedit-Language: Russian\n"
 "X-Poedit-Country: RUSSIAN FEDERATION\n"
-"Plural-Forms: nplurals=2; plural=(n!=1);\n"
-"X-Generator: Gtranslator 2.91.5\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Gtranslator 2.91.6\n"
 
 #: ../data/gcm-calibrate.desktop.in.h:1
 msgid "Color"
@@ -59,25 +59,21 @@ msgstr "XYZ"
 
 #. Lab is the color representation and D50 is the white point
 #: ../data/gcm-picker.ui.h:8
-#| msgid "Lab (D50):"
 msgid "Lab (D50)"
 msgstr "Lab (D50)"
 
 #. This refers to the amount of ambient light on the sensor
 #: ../data/gcm-picker.ui.h:10
-#| msgid "Media whitepoint:"
 msgid "Media whitepoint"
 msgstr "Punto blanco del medio"
 
 #. This refers to the amount of ambient light on the sensor
 #: ../data/gcm-picker.ui.h:12
-#| msgid "Color Temperature:"
 msgid "Color Temperature"
 msgstr "Temperatura del color"
 
 #. This refers to the amount of ambient light on the sensor
 #: ../data/gcm-picker.ui.h:14
-#| msgid "Ambient:"
 msgid "Ambient"
 msgstr "Ambiente"
 
@@ -96,7 +92,6 @@ msgstr "RGB"
 
 #. This shows the error in the conversion to RGB.
 #: ../data/gcm-picker.ui.h:20
-#| msgid "Error:"
 msgid "Error"
 msgstr "Error"
 
@@ -940,17 +935,20 @@ msgstr "CMP DT 003"
 
 #. TRANSLATORS: this is probably a brand name
 #: ../src/gcm-calibrate-main.c:1232
-msgid "Color Checker"
+#| msgid "Color Checker"
+msgid "ColorChecker"
 msgstr "Comprobador de color"
 
 #. TRANSLATORS: this is probably a brand name
 #: ../src/gcm-calibrate-main.c:1236
-msgid "Color Checker DC"
+#| msgid "Color Checker DC"
+msgid "ColorChecker DC"
 msgstr "Comprobador de color DC"
 
 #. TRANSLATORS: this is probably a brand name
 #: ../src/gcm-calibrate-main.c:1240
-msgid "Color Checker SG"
+#| msgid "Color Checker SG"
+msgid "ColorChecker SG"
 msgstr "Comprobador de color SG"
 
 #. TRANSLATORS: this is probably a brand name
@@ -2698,9 +2696,9 @@ msgstr "Establecer el archivo específico que mostrar"
 #~ "profile. Use 'ask' if you want the user to choose."
 #~ msgstr ""
 #~ "La longitud de la calibración, ya que es proporcional a la precisión. La "
-#~ "opción «corta» crea un perfil rápido, «normal» un perfil regular y «larga» "
-#~ "lleva mucho tiempo pero es más precisa y crea un mejor perfil. Use "
-#~ "«preguntar» si quiere que el usuario elija."
+#~ "opción «corta» crea un perfil rápido, «normal» un perfil regular y "
+#~ "«larga» lleva mucho tiempo pero es más precisa y crea un mejor perfil. "
+#~ "Use «preguntar» si quiere que el usuario elija."
 
 #~ msgid "The rendering intent to use for softproofs, e.g. 'perceptual'"
 #~ msgstr ""
