--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,39 @@
+Version 3.11.3
+~~~~~~~~~~~~~~
+Released: 2013-12-17
+
+* Translations
+ - Updated Catalan (Valencian) translation (Carles Ferrando)
+ - Updated Dutch translation (Wouter Bolsterlee)
+ - Updated Galician translation (Fran Diéguez)
+ - Updated Greek translation (Dimitris Spingos)
+ - Updated Greek translation (Efstathios Iosifidis)
+ - Updated Italian translation (Milo Casagrande)
+ - Updated Persian translation (Arash Mousavi)
+ - Updated Russian translation (Julia Dronova)
+ - Updated Slovenian translation (Matej Urbančič)
+ - Updated Spanish translation (Daniel Mustieles)
+ - Updated Tajik translation (Victor Ibragimov)
+ - Updated Tamil translation (Shantha kumar)
+ - Updated Traditional Chinese translation (Cheng-Chia Tseng)
+
+* New Features:
+ - Translate the AppData file (Richard Hughes)
+ - Add some new 16:9 screenshots (Richard Hughes)
+
+* Bugfix:
+ - ColorChecker is one word (Ekaterina Gerasimova)
+ - Correct the approximate timings in the calibration dialog (Pascal de Bruijn)
+ - Default to quick calibration, should be more than enough (Pascal de Bruijn)
+ - Don't depend on software we are not using (Richard Hughes)
+ - Fix grammar in the AppData description (Piotr Drąg)
+ - Generate display profiles with a perceptual rendering intent (Pascal de Bruijn)
+ - Laptops can have different display types too (Pascal de Bruijn)
+ - Make gcm-picker look like a GNOME 3 application (Richard Hughes)
+ - Make it work with dispcal using stderr (Patryk Zawadzki)
+ - Remove the 3D hull functionality (Richard Hughes)
+ - Support more display types (Pascal de Bruijn)
+
 Version 3.10.0
 ~~~~~~~~~~~~~~
 Released: 2013-09-24
